<resources>
    <string name="app_name">JobNow</string>
    <string name="login_placeholder">Email address</string>
    <string name="password_placeholder">Password</string>
    <string name="login_text">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="please_enter_a_valid_mail">Please enter a valid mail!</string>
    <string name="password_error">Password should be between 8 to 30 characters, with at least an uppercase and lowercase letter, a number and a special character.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_loading_message">Please wait…</string>
    <string name="are_you_a_recruiter">Are you a recruiter?</string>
    <string name="create_an_account">Create an account!</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="current_position">Current position</string>
    <string name="add_skills">Add skills</string>
    <string name="company">Company</string>

    <string name="job_position_placeholder">Job position</string>
    <string name="job_posting_location_placeholder">Office No:</string>
    <string name="job_posting_date">Date Posted :-</string>
    <string name="job_description_placeholder">Job description placeholder Job description placeholderJob description placeholderJob description placeholderJob description placeholderJob description placeholder</string>
    <string name="apply_now">Apply Now</string>

    <string name="john_doe">John Doe</string>
    <string name="position">Position</string>

    <string name="saved_jobs_toolbar">All Jobs</string>
    <string name="job_details_toolbar">Job Details</string>

    <string name="placeholder_job_detail_position">Developer</string>
    <string name="placeholder_job_detail_company">Company</string>
    <string name="placeholder_vacancy_nb_job_detail">Vacancy - </string>
    <string name="date_posted_job_detail_tv">Date posted :- </string>
    <string name="designation_job_detail">Designation :- </string>
    <string name="phone_job_detail">Phone :- </string>
    <string name="email_job_description">Email :- </string>
    <string name="website_job_description">Website :- </string>
    <string name="address_job_posting">Address :- </string>
    <string name="save_job_job_description">save this job</string>
    <string name="job_details">Job details</string>
    <string name="similar_jobs">similar jobs</string>
    <string name="see_applied_jobs">See applied jobs</string>

    <string name="job_description">Job Description</string>
    <string name="job_skills">Job skills</string>
    <string name="salary">Salary</string>

</resources>